@@ -328,6 +328,10 @@ HISTORY
 
   ++ Bugfixes:
 
+  2016-08-23: Simon Goldschmidt
+  * etharp: removed ETHARP_TRUST_IP_MAC since it is insecure and we don't need
+    it any more after implementing unicast ARP renewal towards arp entry timeout
+
   2016-07-20: Simon Goldschmidt
   * memp.h/.c: fixed bug #48442 (memp stats don't work for MEMP_MEM_MALLOC)
 
